--- a/coatnet_v2_malimg.ipynb
+++ b/coatnet_v2_malimg.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Swin Transformer V2 implementation reused from\n",
+    "# CoatNet implementation reused from\n",
     "# https://github.com/leondgarse/keras_cv_attention_models/tree/main/keras_cv_attention_models/coatnet\n",
     "# - data preprocessing and brief EDA inspired by https://www.kaggle.com/code/tiletisaitejareddy/malware-classification-ism\n",
     "\n"
